--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon (2012.0+e3-rcb4) maverick; urgency=low
+
+  * fix dep to python-dateutil.  doh.
+
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Fri, 17 Feb 2012 13:13:27 -0600
+
 horizon (2012.0+e3-rcb3) maverick; urgency=low
 
   * add dep on python-mox and python-datetime
